--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,8 +34,10 @@ sntable_dump_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm $(GSLCBLASLIB) -lpthread -lz -
 
 sntable_combine_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm $(GSLCBLASLIB) -lpthread -lz -lstdc++ $(ROOTLIBS)
 
+combine_fitres_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm $(GSLCBLASLIB) -lpthread -lz -lstdc++ $(ROOTLIBS)
+
 # --------------------------------------------
-bin_PROGRAMS = sntable_dump sntable_combine
+bin_PROGRAMS = sntable_dump sntable_combine combine_fitres
 
 
 SNTOOLS_OUTPUT = \
@@ -43,5 +45,6 @@ SNTOOLS_OUTPUT = \
 
 sntable_dump_SOURCES = sntable_dump.c sntools.c sntools_output.cpp
 
-
 sntable_combine_SOURCES = sntable_combine.c sntools.c sntools_output.cpp
+
+combine_fitres_SOURCES = combine_fitres.c sntools.c sntools_output.cpp
