build SALT2mu after forcing use for gfortran linker

--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,8 @@ AC_CONFIG_MACRO_DIR([m4])
 dnl setting up gfortran and gcc
 AC_PROG_CC([gcc])
 AC_PROG_FC([gfortran])
+AC_PROG_F77([gfortran])
+AC_F77_LIBRARY_LDFLAGS
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile src/Makefile])
 
