--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,7 +30,7 @@ AM_LDFLAGS = $(MYLDFLAGS)
 # tack on flag to provide git version to C/fortran codes
 AM_CFLAGS += -DGIT_SNANA_VERSION=\"$(GIT_VERSION)\"
 
-bin_PROGRAMS = sntable_dump sntable_combine combine_fitres.exe SALT2mu wfit.exe kcor.exe snlc_sim.exe SIMSED_fudge.exe SIMSED_extractSpec.exe SIMSED_check.exe SIMSED_rebin.exe simlib_coadd.exe unfold_snpar.exe
+bin_PROGRAMS = snana.exe sntable_dump sntable_combine combine_fitres.exe SALT2mu wfit.exe kcor.exe snlc_sim.exe SIMSED_fudge.exe SIMSED_extractSpec.exe SIMSED_check.exe SIMSED_rebin.exe simlib_coadd.exe unfold_snpar.exe snlc_fit.exe psnid.exe
 
 sntable_dump_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm $(GSLCBLASLIB) -lpthread -lz -lstdc++ $(ROOTLIBS)
 
@@ -46,9 +46,9 @@ snlc_sim_exe_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm -lpthread $(ROOTLIBS) @PYTHON_
 
 snlc_sim_exe_CFLAGS = $(AM_CFLAGS) @PYTHON_INCLUDES@
 
-#snlc_fit_exe_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm -lpthread $(ROOTLIBS) $(FLIBS)
+snlc_fit_exe_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm -lpthread -lstdc++ $(ROOTLIBS) $(FLIBS)
 
-#snlc_fit_exe_LINK = $(FC) -o snlc_fit_exe
+snlc_fit_exe_LINK = $(FC) -o snlc_fit.exe
 
 
 SIMSED_fudge_exe_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm -lpthread -lstdc++ $(ROOTLIBS)
@@ -64,12 +64,18 @@ simlib_coadd_exe_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm -lpthread -lstdc++ $(ROOTL
 
 unfold_snpar_exe_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm -lpthread -lstdc++ $(ROOTLIBS)
 
+snana_exe_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm -lstdc++ $(ROOTLIBS) $(FLIBS)
+
+psnid_exe_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm -lstdc++ $(ROOTLIBS) $(FLIBS)
 
 SALT2mu_LDADD =  $(CFITSIOLIB) $(GSLLIB) -lm $(GSLCBLASLIB) -lpthread -lz -lstdc++ $(ROOTLIBS) $(FLIBS)
 
 # Need to force automake to use gfortran as the linker
 SALT2mu_LINK = $(FC) -o SALT2mu
 
+snana_exe_LINK = $(FC) -o snana.exe
+
+psnid_exe_LINK = $(FC) -o psnid.exe
 
 SNTOOLS_OUTPUT = \
         sntools_output.cpp
@@ -87,13 +93,13 @@ kcor_exe_SOURCES = kcor.c sntools.c MWgaldust.c sntools_spectrograph.c genmag_SE
 
 sntools_snana_SRC = sntools.c sntools_gridmap.c sntools_nonlinearity.c sntools_fluxErrModels.c sntools_fluxErrModels_legacy.c sntools_simeff_obsolete.c sntools_dataformat_fits.c sntools_dataformat_text.c sntools_data.c sntools_modelgrid_read.c sntools_calib.c sntools_output.cpp yaml.c MWgaldust.c sntools_cosmology.c multiseason.c
 
-genmag_fit_SRC = genmag_stretch2.c genmag_mlcs2k2.c genmag_SALT2.c genmag_BAYESN.c genmag_snoopy.c genmag_S11DM15.c genmag_extinction.c genmag_extrap.c
+genmag_fit_SRC = genmag_stretch2.c genmag_mlcs2k2.c genmag_SALT2.c genmag_BAYESN.c genmag_snoopy.c genmag_S11DM15.c genmag_extinction.c genmag_extrap.c genmag_SEDtools.c
 
-genmag_sim_SRC = genmag_NON1ASED.c genmag_NON1AGRID.c genmag_LCLIB.c genmag_PySEDMODEL.c genmag_SEDtools.c genmag_SIMSED.c $(genmag_fit_SRC)
+genmag_sim_SRC = genmag_NON1ASED.c genmag_NON1AGRID.c genmag_LCLIB.c genmag_PySEDMODEL.c genmag_SIMSED.c $(genmag_fit_SRC)
 
 snlc_sim_exe_SOURCES = snlc_sim.c $(sntools_snana_SRC) sntools_host.c sntools_wgtmap.c sntools_weaklens.c sntools_stronglens.c sntools_wronghost.c sntools_genSmear.c sntools_devel.c sntools_sim_readme.c sntools_sim_atmosphere.c sntools_trigger.c sntools_modelgrid_gen.c sntools_spectrograph.c sntools_genPDF.c sntools_genGauss_asym.c sntools_genExpHalfGauss.c inoue_igm.c $(genmag_sim_SRC)
 
-#snlc_fit_exe_SOURCES = snlc_fit.f $(sntools_snana_SRC) sntools_genSmear.c sntools_devel.c sntools_zPDF_spline.c minuit.F $(genmag_fit_SRC)
+snlc_fit_exe_SOURCES = snlc_fit.f $(sntools_snana_SRC) sntools_genSmear.c sntools_devel.c sntools_zPDF_spline.c minuit.F $(genmag_fit_SRC)
 
 SALT2mu_SOURCES = SALT2mu.c sntools.c sntools_output.cpp sntools_gridmap.c sntools_genGauss_asym.c minuit.F sntools_genExpHalfGauss.c
 
@@ -110,3 +116,43 @@ SIMSED_rebin_exe_SOURCES = SIMSED_rebin.c sntools.c genmag_SEDtools.c sntools_ou
 simlib_coadd_exe_SOURCES = simlib_coadd.c MWgaldust.c sntools.c sntools_output.cpp sntools_cosmology.c
 
 unfold_snpar_exe_SOURCES = unfold_snpar.c sntools.c sntools_output.cpp 
+
+SNTOOLS_SNANA_SRC = sntools.c sntools_gridmap.c sntools_nonlinearity.c sntools_fluxErrModels.c sntools_fluxErrModels_legacy.c sntools_simeff_obsolete.c sntools_dataformat_fits.c sntools_dataformat_text.c sntools_data.c sntools_modelgrid_read.c sntools_calib.c sntools_output.cpp yaml.c MWgaldust.c sntools_cosmology.c multiseason.c
+
+snana_exe_SOURCES = snana.f minuit.F $(SNTOOLS_SNANA_SRC)
+
+psnid_exe_SOURCES = psnid.f $(SNTOOLS_SNANA_SRC) psnid_tools.c psnid_BEST.c psnid_BEST2.c minuit.F
+
+BUILT_SOURCES = snana.f psnid.f snlc_fit.f
+
+CLEANFILES = snana.f snana.lnk psnid.f psnid.lnk snlc_fit.lnk
+
+EXTRA_DIST = snana.cra snana.car psnid.cra psnid.car snlc_fit.cra snlc_fit.cra
+
+snana.f: snana.cra snana.car
+	@echo "Generating $@ from patchy sources..."
+	for item in snana ; do \
+	    rm -f $$item.lnk; \
+	    ln -s $$item.car $$item.lnk; \
+	done
+	$(UTIL_DIR)/ypatchy.pl - $@ snana.cra .go
+	rm -f snana.lnk
+
+
+snlc_fit.f: snlc_fit.cra snlc_fit.cra snlc_fit.car snana.car
+	@echo "Generating $@ from patchy sources..."
+	for item in snana snlc_fit; do \
+	    rm -f $$item.lnk; \
+	    ln -s $$item.car $$item.lnk; \
+	done
+	$(UTIL_DIR)/ypatchy.pl - $@ snlc_fit.cra .go
+	rm  snana.lnk snlc_fit.lnk
+
+psnid.f: psnid.cra psnid.cra psnid.car snana.car snlc_fit.cra snlc_fit.car
+	@echo "Generating $@ from patchy sources..."
+	for item in snana snlc_fit psnid ; do \
+	    rm -f $$item.lnk; \
+	    ln -s $$item.car $$item.lnk; \
+	done
+	$(UTIL_DIR)/ypatchy.pl - $@ psnid.cra .go
+	rm  snana.lnk snlc_fit.lnk psnid.lnk
