clean up ROOTSYS handling

--- a/configure.ac
+++ b/configure.ac
@@ -58,16 +58,20 @@ AC_CHECK_LIB([gslcblas],[cblas_dgemm], [GSLCBLASLIB="-lgslcblas"], [], [$LIBS])
 AC_SUBST([GSLCBLASLIB])
 AC_CHECK_LIB([gsl],[gsl_blas_dgemm], [GSLLIB="-lgsl"], [], [$LIBS])
 AC_SUBST([GSLLIB])
+
+
 AC_CHECK_LIB([cfitsio], [ffopen], [CFITSIOLIB="-lcfitsio"], [AC_MSG_ERROR([cfitsio library not found. Please install CFITSIO.])], [$LIBS])
 AC_SUBST([CFITSIOLIB])
 
 AC_ARG_VAR(ROOTSYS)
 if test -n "$ROOTSYS"; then
   root_avail=yes
-  AM_CONDITIONAL([USE_ROOT], [test "x$root_avail" = "xyes"])
-  AC_SUBST(USE_ROOT) 
-  echo "ROOTSYS is set to: $ROOTSYS"
+else
+  root_avail=no
 fi
+
+AM_CONDITIONAL([USE_ROOT], [test "x$root_avail" = "xyes"])
+echo "ROOTSYS is ${ROOTSYS:-not set}"
 
 dnl set up C++ 17 flags
 m4_include([m4/m4_ax_cxx_compile_stdcxx.m4])
