--- a/src/Makefile
+++ b/src/Makefile
@@ -89,12 +89,17 @@ endif
 # ------------------------
 # compile default storage options for both ROOT and BAYESN.
 USE_ROOT   = 1
-USE_BAYESN = 1
+USE_F90    = 0
 
 ifndef ROOT_DIR
    USE_ROOT = 0
 endif
 
+ifeq ($(USE_F90),0)
+	ff = f
+else
+	ff = F90
+endif
 
 # ------------------------------------------
 # define libraries
@@ -442,9 +447,10 @@ $(BIN)/SALT2mu.exe : $(OBJ)/SALT2mu.o  $(OBJ)/sntools.o $(OBJ)/sntools_output.o 
 # -------------------------------------------------
 # SN analysis shell (reads DATA Files, makes cuts ...)
 
-$(OBJ)/snana.o :  snana.f  
-	(cd $(OBJ); $(FFC) $(SNFFLAGS) $(SRC)/snana.f)
+$(OBJ)/snana.o :  snana.$(ff)  
+	(cd $(OBJ); $(FFC) $(SNFFLAGS) -DSNANA -DMINUIT $(SRC)/snana.$(ff) )
 
+ifeq ($(USE_F90),0)
 snana.f : snana.cra  snana.cra snana.car  
 	for item in snana ; do \
 	    rm -f $$item.lnk; \
@@ -452,6 +458,7 @@ snana.f : snana.cra  snana.cra snana.car
 	done
 	$(UTIL)/ypatchy.pl - $@ snana.cra .go
 	rm snana.lnk
+endif
 
 $(BIN)/snana.exe :  $(OBJ_SNANA)
 	$(FFC) -o $@ $(SNLDFLAGS)  \
@@ -463,9 +470,10 @@ $(BIN)/snana.exe :  $(OBJ_SNANA)
 # -------------------------------------------------
 # SN light curve fitter 
 
-$(OBJ)/snlc_fit.o :  snlc_fit.f 
-	(cd $(OBJ); $(FFC) $(SNFFLAGS) $(SRC)/snlc_fit.f)
+$(OBJ)/snlc_fit.o :  snlc_fit.$(ff)
+	(cd $(OBJ); $(FFC) $(SNFFLAGS) -DSNFIT -DMINUIT $(SRC)/snlc_fit.$(ff) )
 
+ifeq ($(USE_F90),0)
 snlc_fit.f : snlc_fit.cra  snlc_fit.cra  snlc_fit.car snana.car 
 	for item in  snana snlc_fit; do \
 	    rm -f $$item.lnk; \
@@ -473,6 +481,7 @@ snlc_fit.f : snlc_fit.cra  snlc_fit.cra  snlc_fit.car snana.car
 	done
 	$(UTIL)/ypatchy.pl - $@ snlc_fit.cra .go
 	rm snana.lnk  snlc_fit.lnk 
+endif
 
 $(BIN)/snlc_fit.exe : $(OBJ_SNFIT)
 	$(FFC) -o $@ $(SNLDFLAGS)  \
@@ -501,9 +510,10 @@ $(OBJ)/psnid_BEST2.o : $(SRC)/psnid_BEST2.c $(SRC)/sntools.h \
 	$(CC) $(SNCFLAGS) $(ICFITSIO) $(IGSL) $(SRC)/psnid_BEST2.c )
 
 
-$(OBJ)/psnid.o :  psnid.f
-	(cd $(OBJ); $(FFC) $(SNFFLAGS) $(SRC)/psnid.f)
+$(OBJ)/psnid.o :  psnid.$(ff)
+	(cd $(OBJ); $(FFC) $(SNFFLAGS) -DPSNID $(SRC)/psnid.$(ff) )
 
+ifeq ($(USE_F90),0)
 psnid.f : psnid.cra  psnid.cra  psnid.car  snana.car  snlc_fit.cra snlc_fit.car
 	for item in  snana  snlc_fit psnid ; do \
 	    rm -f $$item.lnk; \
@@ -511,6 +521,7 @@ psnid.f : psnid.cra  psnid.cra  psnid.car  snana.car  snlc_fit.cra snlc_fit.car
 	done
 	$(UTIL)/ypatchy.pl - $@ psnid.cra .go
 	rm snana.lnk snlc_fit.lnk psnid.lnk
+endif
 
 $(BIN)/psnid.exe : $(OBJ_PSNID) 
 	$(FFC) -o $@ $(SNLDFLAGS) \
